# lang-graph

./: .gitignore  AGENTS.md  README.md  STUDY_GUIDE.md  pyproject.toml
docs/: AGENT_HANDOFF.md
examples/: 01_hello_graph.py  02_state_and_reducers.py  03_conditional_routing.py  04_agent_loop.py  05_memory_checkpoint.py  06_human_in_loop.py  07_streaming.py  08_research_assistant.py
lessons/: 01_hello_graph.md  02_state_and_reducers.md
scripts/: show_graph.py  sync_progress.sh
tests/: test_examples.py
